.logs/live_combined_20251029-185428.log
==> /home/dzoan/credit-appraisal-agent-poc/.logs/api_20251029-185428.log <==

==> /home/dzoan/credit-appraisal-agent-poc/.logs/ui_20251029-185428.log <==

==> /home/dzoan/credit-appraisal-agent-poc/.logs/api_20251029-185428.log <==
INFO:     Will watch for changes in these directories: ['/home/dzoan/credit-appraisal-agent-poc']
ERROR:    [Errno 98] Address already in use

==> /home/dzoan/credit-appraisal-agent-poc/.logs/ui_20251029-185428.log <==

  You can now view your Streamlit app in your browser.

  URL: http://0.0.0.0:8502

2025-10-29 18:54:33.970 Script compilation error
Traceback (most recent call last):
  File "/home/dzoan/credit-appraisal-agent-poc/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/dzoan/credit-appraisal-agent-poc/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
  File "/home/dzoan/credit-appraisal-agent-poc/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
  File "/usr/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "/home/dzoan/credit-appraisal-agent-poc/services/ui/app.py", line 596
    ─────────────────────────────────────────────
    ^
SyntaxError: invalid character '─' (U+2500)
2025-10-29 18:54:33.972 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
  Stopping...
